Fixed Styles, Scripts Path

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../sass/all.min.css">
-    <link rel="stylesheet" href="../sass/normalize.css">
-    <link rel="stylesheet" href="../sass/myframework.css">
-    <link rel="stylesheet" href="../sass/main.css">
+    <link rel="stylesheet" href="./sass/all.min.css">
+    <link rel="stylesheet" href="./sass/normalize.css">
+    <link rel="stylesheet" href="./sass/myframework.css">
+    <link rel="stylesheet" href="./sass/main.css">
     <title>ADMIN DASHBOARD</title>
   </head>
   <body>
@@ -169,7 +169,7 @@
           </div>
           <div class="latest-upload p-20 bg-white rad-6">
             <h2 class="mt-0 mb-20">Latest Upload</h2>
-            <ul>
+            <ul class="m-0">
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex al-c"><img class="mr-10 w-full" src="imgs/land-pyke.jpg" alt="" srcset=""/>
                   <div>
@@ -208,7 +208,7 @@
           </div>
           <div class="reminders p-20 bg-white rad-6 p-rel">
             <h2 class="mt-0 mb-25">Reminders</h2>
-            <ul>
+            <ul class="m-0">
               <li class="d-flex al-c mt-15"><span class="key bg-blue mr-15 d-block rad-half"></span>
                 <div class="pl-15 blue">
                   <p class="fs-14 fw-bold mt-0 mb-5">Check My Tasks List</p><span class="fs-13 c-grey">06/10/2022 - 06:00pm</span>
