--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../sass/all.min.css" />
-    <link rel="stylesheet" href="../sass/normalize.css" />
-    <link rel="stylesheet" href="../sass/myframework.css" />
-    <link rel="stylesheet" href="../sass/main.css" />
+    <link rel="stylesheet" href="./sass/all.min.css" />
+    <link rel="stylesheet" href="./sass/normalize.css" />
+    <link rel="stylesheet" href="./sass/myframework.css" />
+    <link rel="stylesheet" href="./sass/main.css" />
     <title>Project</title>
   </head>
   <body>
