--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <div class="board bg-white p-20 p-rel">
         <h3 class="p-rel txt-c mt-0">OSMAN</h3>
         <ul>
-          <li><a class="active p-10 rad-6" href="index.html" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-dashcube fa-fw"></i><span>Dashboard</span></a></li>
-          <li><a class="p-10 rad-6" href="settings.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a></li>
-          <li><a class="p-10 rad-6" href="profile.html" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a></li>
-          <li><a class="p-10 rad-6" href="projects.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-diagram-project fa-fw"></i><span>Projects</span></a></li>
-          <li><a class="p-10 rad-6" href="courses.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-sheet-plastic fa-fw"></i><span>Courses</span></a></li>
-          <li><a class="p-10 rad-6" href="friends.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-user-group fa-fw"></i><span>Friends</span></a></li>
-          <li><a class="p-10 rad-6" href="files.html" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
-          <li><a class="p-10 rad-6" href="plans.html" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-lightbulb fa-fw"></i><span>Plans</span></a></li>
+          <li><a class="active p-10 rad-6" href="index.html" rel="noopener noreferrer"><i class="fa-brands fa-dashcube fa-fw"></i><span>Dashboard</span></a></li>
+          <li><a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a></li>
+          <li><a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a></li>
+          <li><a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"><i class="fa-solid fa-diagram-project fa-fw"></i><span>Projects</span></a></li>
+          <li><a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"><i class="fa-solid fa-sheet-plastic fa-fw"></i><span>Courses</span></a></li>
+          <li><a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"><i class="fa-solid fa-user-group fa-fw"></i><span>Friends</span></a></li>
+          <li><a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
+          <li><a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"><i class="fa-regular fa-lightbulb fa-fw"></i><span>Plans</span></a></li>
         </ul>
       </div>
       <div class="web w-full">
@@ -313,7 +313,6 @@
         </div>
       </div>
     </div>
-    <script src="/js/bootstrap.bundle.min.js"> </script>
     <script src="/js/main.js"></script>
   </body>
 </html>
