--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,6 @@
             <a
               class="p-10 rad-6"
               href="index.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
@@ -29,7 +28,6 @@
             <a
               class="p-10 rad-6"
               href="settings.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
@@ -38,7 +36,6 @@
             <a
               class="active p-10 rad-6"
               href="profile.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
@@ -47,7 +44,6 @@
             <a
               class="p-10 rad-6"
               href="projects.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
@@ -57,7 +53,6 @@
             <a
               class="p-10 rad-6"
               href="courses.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
@@ -67,7 +62,6 @@
             <a
               class="p-10 rad-6"
               href="friends.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
@@ -77,7 +71,6 @@
             <a
               class="p-10 rad-6"
               href="files.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
@@ -86,7 +79,6 @@
             <a
               class="p-10 rad-6"
               href="plans.html"
-              target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
@@ -285,5 +277,7 @@
         </div>
       </div>
     </div>
+    <script src="js/main.js"></script>
+
   </body>
 </html>
