--- a/friends.html
+++ b/friends.html
@@ -13,47 +13,32 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
@@ -68,18 +53,12 @@
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
@@ -112,7 +91,11 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -134,7 +117,9 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -145,7 +130,11 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -166,7 +155,9 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -177,40 +168,11 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
-              <h4>Mecha-Mind</h4>
-              <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
-            </div>
-            <div class="icons p-rel fs-14">
-              <div class="mb-10">
-                <i class="fa-regular fa-face-smile fa-fw"></i>
-                <span>28 Friends</span>
-              </div>
-              <div class="mb-10">
-                <i class="fa-solid fa-code-commit fa-fw"></i>
-                <span>12 Projects</span>
-              </div>
-              <div class="mb-10">
-                <i class="fa-regular fa-newspaper fa-fw"></i>
-                <span>8 Articles</span>
-              </div>
-              <span class="vip c-orange fw-bold">VIP</span>
-            </div>
-            <div class="info between-flex fs-13">
-              <span class="c-grey">Joined 00/00/2022</span>
-              <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
-                <a href="#" class="bg-red c-white btn-shape">Remove</a>
-              </div>
-            </div>
-          </div>
-          <div class="friend bg-white rad-6 p-20 p-rel">
-            <div class="contact">
-              <i class="fa-solid fa-phone"></i>
-              <i class="fa-regular fa-envelope"></i>
-            </div>
-            <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -232,7 +194,9 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -243,7 +207,11 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -265,7 +233,9 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -276,39 +246,11 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
-              <h4>Mecha-Mind</h4>
-              <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
-            </div>
-            <div class="icons p-rel fs-14">
-              <div class="mb-10">
-                <i class="fa-regular fa-face-smile fa-fw"></i>
-                <span>28 Friends</span>
-              </div>
-              <div class="mb-10">
-                <i class="fa-solid fa-code-commit fa-fw"></i>
-                <span>12 Projects</span>
-              </div>
-              <div class="mb-10">
-                <i class="fa-regular fa-newspaper fa-fw"></i>
-                <span>8 Articles</span>
-              </div>
-            </div>
-            <div class="info between-flex fs-13">
-              <span class="c-grey">Joined 00/00/2022</span>
-              <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
-                <a href="#" class="bg-red c-white btn-shape">Remove</a>
-              </div>
-            </div>
-          </div>
-          <div class="friend bg-white rad-6 p-20 p-rel">
-            <div class="contact">
-              <i class="fa-solid fa-phone"></i>
-              <i class="fa-regular fa-envelope"></i>
-            </div>
-            <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -330,7 +272,9 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -341,7 +285,49 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
             <div class="txt-c">
-              <img class="rad-half mt-10 mb-10 w-100 h-100" src="imgs/land-pyke.jpg" alt="Friend">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
+              <h4>Mecha-Mind</h4>
+              <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
+            </div>
+            <div class="icons p-rel fs-14">
+              <div class="mb-10">
+                <i class="fa-regular fa-face-smile fa-fw"></i>
+                <span>28 Friends</span>
+              </div>
+              <div class="mb-10">
+                <i class="fa-solid fa-code-commit fa-fw"></i>
+                <span>12 Projects</span>
+              </div>
+              <div class="mb-10">
+                <i class="fa-regular fa-newspaper fa-fw"></i>
+                <span>8 Articles</span>
+              </div>
+            </div>
+            <div class="info between-flex fs-13">
+              <span class="c-grey">Joined 00/00/2022</span>
+              <div>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
+                <a href="#" class="bg-red c-white btn-shape">Remove</a>
+              </div>
+            </div>
+          </div>
+          <div class="friend bg-white rad-6 p-20 p-rel">
+            <div class="contact">
+              <i class="fa-solid fa-phone"></i>
+              <i class="fa-regular fa-envelope"></i>
+            </div>
+            <div class="txt-c">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
               <h4>Mecha-Mind</h4>
               <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
             </div>
@@ -363,7 +349,48 @@
             <div class="info between-flex fs-13">
               <span class="c-grey">Joined 00/00/2022</span>
               <div>
-                <a href="profile.html" class="bg-blue c-white btn-shape">Profile</a>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
+                <a href="#" class="bg-red c-white btn-shape">Remove</a>
+              </div>
+            </div>
+          </div>
+          <div class="friend bg-white rad-6 p-20 p-rel">
+            <div class="contact">
+              <i class="fa-solid fa-phone"></i>
+              <i class="fa-regular fa-envelope"></i>
+            </div>
+            <div class="txt-c">
+              <img
+                class="rad-half mt-10 mb-10 w-100 h-100"
+                src="imgs/land-pyke.jpg"
+                alt="Friend"
+              />
+              <h4>Mecha-Mind</h4>
+              <p class="c-grey fs-13 mt-5 mb-0">Python Developer</p>
+            </div>
+            <div class="icons p-rel fs-14">
+              <div class="mb-10">
+                <i class="fa-regular fa-face-smile fa-fw"></i>
+                <span>28 Friends</span>
+              </div>
+              <div class="mb-10">
+                <i class="fa-solid fa-code-commit fa-fw"></i>
+                <span>12 Projects</span>
+              </div>
+              <div class="mb-10">
+                <i class="fa-regular fa-newspaper fa-fw"></i>
+                <span>8 Articles</span>
+              </div>
+              <span class="vip c-orange fw-bold">VIP</span>
+            </div>
+            <div class="info between-flex fs-13">
+              <span class="c-grey">Joined 00/00/2022</span>
+              <div>
+                <a href="profile.html" class="bg-blue c-white btn-shape"
+                  >Profile</a
+                >
                 <a href="#" class="bg-red c-white btn-shape">Remove</a>
               </div>
             </div>
@@ -372,6 +399,5 @@
       </div>
     </div>
     <script src="js/main.js"></script>
-
   </body>
 </html>
