--- a/profile.html
+++ b/profile.html
@@ -13,22 +13,16 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
@@ -41,45 +35,30 @@
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
@@ -108,11 +87,15 @@
         <div class="profile-page m-20">
           <div class="overview bg-white rad-6 d-flex al-c">
             <div class="avatar-box txt-c p-20">
-              <img src="imgs/land-pyke.jpg" alt="Profile Image" class="rad-half mb-10">
+              <img
+                src="imgs/land-pyke.jpg"
+                alt="Profile Image"
+                class="rad-half mb-10"
+              />
               <h3 class="m-0">Mecha-Mind</h3>
               <p class="c-grey mt-10 mb-10">Level 14</p>
               <div class="level rad-6 bg-eee p-rel">
-                <span style="width:65%"></span>
+                <span style="width: 65%"></span>
               </div>
               <div class="rating mt-10 mb-10">
                 <i class="fa-solid fa-star c-orange fs-13"></i>
@@ -125,7 +108,9 @@
             </div>
             <div class="info-box txt-c-mobile">
               <div class="box p-20 d-flex al-c">
-                <h4 class="fs-15 fw-normal c-grey w-full m-0">General Information</h4>
+                <h4 class="fs-15 fw-normal c-grey w-full m-0">
+                  General Information
+                </h4>
                 <div class="fs-14">
                   <span class="c-grey">Full Name</span>
                   <span>Mecha-Mind</span>
@@ -140,13 +125,15 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
               </div>
               <div class="box p-20 d-flex al-c">
-                <h4 class="fs-15 fw-normal c-grey w-full m-0">Perosnal Information</h4>
+                <h4 class="fs-15 fw-normal c-grey w-full m-0">
+                  Perosnal Information
+                </h4>
                 <div class="fs-14">
                   <span class="c-grey">Email</span>
                   <span>hanishetos4@gmail.com</span>
@@ -161,13 +148,15 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox">
+                    <input class="toggle-checkbox" type="checkbox" />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
               </div>
               <div class="box p-20 d-flex al-c">
-                <h4 class="fs-15 fw-normal c-grey w-full m-0">Job Information</h4>
+                <h4 class="fs-15 fw-normal c-grey w-full m-0">
+                  Job Information
+                </h4>
                 <div class="fs-14">
                   <span class="c-grey">Job Title</span>
                   <span>Frontend Developer</span>
@@ -182,13 +171,15 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
               </div>
               <div class="box p-20 d-flex al-c">
-                <h4 class="fs-15 fw-normal c-grey w-full m-0">Billing Information</h4>
+                <h4 class="fs-15 fw-normal c-grey w-full m-0">
+                  Billing Information
+                </h4>
                 <div class="fs-14">
                   <span class="c-grey">Payment Method</span>
                   <span>Paypal</span>
@@ -203,7 +194,7 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox">
+                    <input class="toggle-checkbox" type="checkbox" />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
@@ -226,9 +217,11 @@
             </div>
             <div class="activities p-20 mt-20 bg-white rad-6">
               <h2 class="mt-0 mb-10">Latest Activities</h2>
-              <p class="mt-0 mb-20 c-grey fs-15">Latest Activities Done By User</p>
+              <p class="mt-0 mb-20 c-grey fs-15">
+                Latest Activities Done By User
+              </p>
               <div class="activity d-flex al-c txt-c-mobile">
-                <img src="imgs/land-pyke.jpg" alt="Activity-1">
+                <img src="imgs/land-pyke.jpg" alt="Activity-1" />
                 <div class="info">
                   <span class="d-block mb-10">Store</span>
                   <span class="c-grey">Bought Ts Book</span>
@@ -239,7 +232,7 @@
                 </div>
               </div>
               <div class="activity d-flex al-c txt-c-mobile">
-                <img src="imgs/land-pyke.jpg" alt="Activity-1">
+                <img src="imgs/land-pyke.jpg" alt="Activity-1" />
                 <div class="info">
                   <span class="d-block mb-10">Badges</span>
                   <span class="c-grey">Unlocked 10 Skills Badge</span>
@@ -250,7 +243,7 @@
                 </div>
               </div>
               <div class="activity d-flex al-c txt-c-mobile">
-                <img src="imgs/land-pyke.jpg" alt="Activity-1">
+                <img src="imgs/land-pyke.jpg" alt="Activity-1" />
                 <div class="info">
                   <span class="d-block mb-10">Academy</span>
                   <span class="c-grey">Got The Python Certificate</span>
@@ -261,7 +254,7 @@
                 </div>
               </div>
               <div class="activity d-flex al-c txt-c-mobile">
-                <img src="imgs/land-pyke.jpg" alt="Activity-1">
+                <img src="imgs/land-pyke.jpg" alt="Activity-1" />
                 <div class="info">
                   <span class="d-block mb-10">Store</span>
                   <span class="c-grey">Bought Ts Book</span>
@@ -278,6 +271,5 @@
       </div>
     </div>
     <script src="js/main.js"></script>
-
   </body>
 </html>
