--- a/courses.html
+++ b/courses.html
@@ -13,38 +13,26 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
@@ -59,27 +47,18 @@
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
@@ -107,8 +86,8 @@
         <h2 class="col p-rel">Courses</h2>
         <div class="courses-page m-20 d-grid gap-20">
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -126,8 +105,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -145,8 +124,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -164,8 +143,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -183,8 +162,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -202,8 +181,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -221,8 +200,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
@@ -240,8 +219,8 @@
             </div>
           </div>
           <div class="course bg-white p-rel rad-6">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="cover">
-            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor">
+            <img src="imgs/land-pyke.jpg" alt="cover" class="cover" />
+            <img src="imgs/land-pyke.jpg" alt="cover" class="instructor" />
             <div class="p-20">
               <h4 class="m-0">Mastering Web Design</h4>
               <p class="description mt-15 fs-14 c-grey">
