--- a/files.html
+++ b/files.html
@@ -13,73 +13,49 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
@@ -109,7 +85,9 @@
           <div class="files-stats p-20 bg-white rad-6">
             <h2 class="mt-0 mb-15 txt-c-mobile">Files Statistics</h2>
             <div class="d-flex al-c b-eee p-10 rad-6 fs-13 mb-15">
-              <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+              <i
+                class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"
+              ></i>
               <div class="info">
                 <span>PDF Files</span>
                 <span class="c-grey d-block mt-5">110</span>
@@ -117,7 +95,9 @@
               <div class="size c-grey">30mb</div>
             </div>
             <div class="d-flex al-c b-eee p-10 rad-6 fs-13 mb-15">
-              <i class="fa-regular fa-file-word fa-lg green center-flex c-green icon"></i>
+              <i
+                class="fa-regular fa-file-word fa-lg green center-flex c-green icon"
+              ></i>
               <div class="info">
                 <span>Word Files</span>
                 <span class="c-grey d-block mt-5">110</span>
@@ -125,7 +105,9 @@
               <div class="size c-grey">300mb</div>
             </div>
             <div class="d-flex al-c b-eee p-10 rad-6 fs-13 mb-15">
-              <i class="fa-regular fa-images fa-lg orange center-flex c-orange icon"></i>
+              <i
+                class="fa-regular fa-images fa-lg orange center-flex c-orange icon"
+              ></i>
               <div class="info">
                 <span>Image Files</span>
                 <span class="c-grey d-block mt-5">110</span>
@@ -133,14 +115,19 @@
               <div class="size c-grey">3mb</div>
             </div>
             <div class="d-flex al-c b-eee p-10 rad-6 fs-13 mb-15">
-              <i class="fa-solid fa-file-csv fa-lg red center-flex c-red icon"></i>
+              <i
+                class="fa-solid fa-file-csv fa-lg red center-flex c-red icon"
+              ></i>
               <div class="info">
                 <span>Csv Files</span>
                 <span class="c-grey d-block mt-5">110</span>
               </div>
               <div class="size c-grey">130mb</div>
             </div>
-            <a href="#" class="upload bg-blue c-white fs-13 rad-6 d-block w-fit">
+            <a
+              href="#"
+              class="upload bg-blue c-white fs-13 rad-6 d-block w-fit"
+            >
               <i class="fa-solid fa-angles-up mr-10"></i>Upload
             </a>
           </div>
@@ -148,7 +135,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -160,7 +147,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -172,7 +159,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -184,7 +171,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -196,7 +183,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -208,7 +195,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -220,7 +207,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -232,7 +219,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -244,7 +231,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -256,7 +243,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -268,7 +255,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -280,7 +267,7 @@
             <div class="file bg-white p-10 rad-6">
               <i class="fa-solid fa-download c-grey p-aps"></i>
               <div class="icon txt-c">
-                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15">
+                <img src="imgs/unnamed.png" alt="icon" class="mt-15 mb-15" />
               </div>
               <div class="txt-c fs-14 mb-10">my-file.pdf</div>
               <p class="c-grey fs-13">mecha-mind</p>
@@ -294,6 +281,5 @@
       </div>
     </div>
     <script src="js/main.js"></script>
-
   </body>
 </html>
