--- a/plans.html
+++ b/plans.html
@@ -13,65 +13,44 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
@@ -148,7 +127,9 @@
                 <i class="fa-solid fa-circle-info fa-fw help"></i>
               </li>
             </ul>
-            <a class="btn-shape bg-green c-white d-block w-fit" href="#">Join</a>
+            <a class="btn-shape bg-green c-white d-block w-fit" href="#"
+              >Join</a
+            >
           </div>
           <div class="plan blue bg-white p-20">
             <div class="top bg-blue txt-c p-20">
@@ -236,7 +217,9 @@
                 <i class="fa-solid fa-circle-info fa-fw help"></i>
               </li>
             </ul>
-            <a class="btn-shape bg-orange c-white d-block w-fit" href="#">Join</a>
+            <a class="btn-shape bg-orange c-white d-block w-fit" href="#"
+              >Join</a
+            >
           </div>
         </div>
       </div>
