--- a/projects.html
+++ b/projects.html
@@ -13,30 +13,21 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="settings.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="settings.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
@@ -50,36 +41,24 @@
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
@@ -107,15 +86,17 @@
         <h2 class="col p-rel">Project</h2>
         <div class="projects-page m-20 d-grid gap-20">
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -125,7 +106,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -134,15 +115,17 @@
             </div>
           </div>
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -152,7 +135,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -161,15 +144,17 @@
             </div>
           </div>
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -179,7 +164,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -188,15 +173,17 @@
             </div>
           </div>
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -206,7 +193,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -215,15 +202,17 @@
             </div>
           </div>
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -233,7 +222,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -242,15 +231,17 @@
             </div>
           </div>
           <div class="project p-rel rad-6 bg-white p-20">
-            <h4 class="m-0">Osman Dashboard</h4>
+            <h4 class="m-0">Hani Dashboard</h4>
             <span class="date c-grey fs-13">19-19-2022</span>
-            <p class="mt-10 mb-10 c-grey fs-14">My Dashboard Project Design, Programming & Hosting</p>
+            <p class="mt-10 mb-10 c-grey fs-14">
+              My Dashboard Project Design, Programming & Hosting
+            </p>
             <div class="team">
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
-              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image"></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
+              <a href="#"><img src="imgs/land-pyke.jpg" alt="Team Image" /></a>
             </div>
             <div class="techs d-flex">
               <span class="fs-13 rad-6 bg-eee">Programming</span>
@@ -260,7 +251,7 @@
             </div>
             <div class="info between-flex">
               <div class="prog bg-eee">
-                <span class="bg-red" style="width:50%"></span>
+                <span class="bg-red" style="width: 50%"></span>
               </div>
               <div class="fs-14 c-grey">
                 <i class="fa-solid fa-dollar-sign"></i>
@@ -272,6 +263,5 @@
       </div>
     </div>
     <script src="js/main.js"></script>
-
   </body>
 </html>
