--- a/settings.html
+++ b/settings.html
@@ -13,13 +13,10 @@
   <body>
     <div class="mainPage d-grid">
       <div class="board bg-white p-20 p-rel">
-        <h3 class="p-rel txt-c mt-0">OSMAN</h3>
+        <h3 class="p-rel txt-c mt-0">Hani</h3>
         <ul>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="index.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="index.html" rel="noopener noreferrer"
               ><i class="fa-brands fa-dashcube fa-fw"></i
               ><span>Dashboard</span></a
             >
@@ -33,53 +30,35 @@
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="profile.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="profile.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="projects.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="projects.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-diagram-project fa-fw"></i
               ><span>Projects</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="courses.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="courses.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-sheet-plastic fa-fw"></i
               ><span>Courses</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="friends.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="friends.html" rel="noopener noreferrer"
               ><i class="fa-solid fa-user-group fa-fw"></i
               ><span>Friends</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="files.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="files.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
             >
           </li>
           <li>
-            <a
-              class="p-10 rad-6"
-              href="plans.html"
-              rel="noopener noreferrer"
+            <a class="p-10 rad-6" href="plans.html" rel="noopener noreferrer"
               ><i class="fa-regular fa-lightbulb fa-fw"></i
               ><span>Plans</span></a
             >
